--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "aws-amplify-react-native": "^2.1.19",
     "react": "16.8.6",
     "react-native": "0.60.5",
+    "react-native-elements": "^1.2.0",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-reanimated": "^1.2.0",
     "react-native-screens": "^1.0.0-alpha.23",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.5",
     "react-navigation-stack": "^1.8.0"
   },
