--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,9 +1,15 @@
 {
-    "auth": {
-        "testccee8efd": {
-            "service": "Cognito",
-            "providerPlugin": "awscloudformation"
-        }
-    },
-    "notifications": {}
+	"auth": {
+		"testccee8efd": {
+			"service": "Cognito",
+			"providerPlugin": "awscloudformation"
+		}
+	},
+	"notifications": {},
+	"analytics": {
+		"test": {
+			"service": "Pinpoint",
+			"providerPlugin": "awscloudformation"
+		}
+	}
 }
