--- a/android/build.gradle
+++ b/android/build.gradle
@@ -13,7 +13,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:3.4.1")
+        classpath('com.android.tools.build:gradle:3.4.2')
+        // classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.google.gms:google-services:3.2.0'  
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -30,6 +32,8 @@ allprojects {
         maven {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
+            // THIS LINE WAS MAKING HERMES AUTO ENABLED?
+            // url "https://maven.google.com"
         }
 
         google()
